# polish-notation

./: CMakeLists.txt  LICENSE  Options.cmake
cmake/: Cache.cmake  CompilerWarnings.cmake  Coverage.cmake  Doxygen.cmake  EmbedResources.cmake  GenerateCMakeConfig.cmake  GenerateConfig.cmake  GenerateDocumentation.cmake  GeneratePkgConfig.cmake  IPO.cmake  PlatformESP32.cmake  PlatformSetup.cmake  PreventInSourceBuilds.cmake  ProjectDependency.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  TargetArch.cmake
doc/: Doxyfile.in  mainpage.md
doc/doxygen-awesome-css/: doxygen-awesome-sidebar-only.css  doxygen-awesome.css
include/: CMakeLists.txt
include/polish_notation_calculator/: error.h  operation.h  stack_machine.h
lib/: CMakeLists.txt  op_add.cpp  op_div.cpp  op_mul.cpp  op_sub.cpp  stack_machine.cpp
lib/config/: config.cmake.in  pkg-config.in
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
