include (GNUInstallDirs)

set (${PROJECT_CMAKE_NAMESPACE}_PUBLIC_HEADERS ${PROJECT_ID}_public_headers)
set (${PROJECT_CMAKE_NAMESPACE}_PRIVATE_HEADERS ${PROJECT_ID}_private_headers)

add_library (${${PROJECT_CMAKE_NAMESPACE}_PUBLIC_HEADERS} INTERFACE)
add_library (${PROJECT_ID}::PublicHeaders ALIAS ${${PROJECT_CMAKE_NAMESPACE}_PUBLIC_HEADERS})

add_library (${${PROJECT_CMAKE_NAMESPACE}_PRIVATE_HEADERS} INTERFACE)
add_library (${PROJECT_ID}::PrivateHeaders ALIAS ${${PROJECT_CMAKE_NAMESPACE}_PRIVATE_HEADERS})

set_property (TARGET ${${PROJECT_CMAKE_NAMESPACE}_PUBLIC_HEADERS} PROPERTY CXX_STANDARD ${${PROJECT_CMAKE_NAMESPACE}_CXX_STANDARD})
set_property (TARGET ${${PROJECT_CMAKE_NAMESPACE}_PUBLIC_HEADERS} PROPERTY CXX_STANDARD_REQUIRED ON)

set_property (TARGET ${${PROJECT_CMAKE_NAMESPACE}_PRIVATE_HEADERS} PROPERTY CXX_STANDARD ${${PROJECT_CMAKE_NAMESPACE}_CXX_STANDARD})
set_property (TARGET ${${PROJECT_CMAKE_NAMESPACE}_PRIVATE_HEADERS} PROPERTY CXX_STANDARD_REQUIRED ON)

set (
    ${PROJECT_CMAKE_NAMESPACE}_PUBLIC_HEADER_FILES
    ${PROJECT_ID}/operation.h
    ${PROJECT_ID}/error.h
    ${PROJECT_ID}/stack_machine.h
)

set (
    ${PROJECT_CMAKE_NAMESPACE}_PRIVATE_HEADER_FILES
)

target_sources(
    ${${PROJECT_CMAKE_NAMESPACE}_PUBLIC_HEADERS} INTERFACE
    ${${PROJECT_CMAKE_NAMESPACE}_PUBLIC_HEADER_FILES}
)

target_sources(
    ${${PROJECT_CMAKE_NAMESPACE}_PRIVATE_HEADERS} INTERFACE
    ${${PROJECT_CMAKE_NAMESPACE}_PRIVATE_HEADER_FILES}
)

target_include_directories (
    ${${PROJECT_CMAKE_NAMESPACE}_PUBLIC_HEADERS} INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_ID}>
)

target_include_directories (
    ${${PROJECT_CMAKE_NAMESPACE}_PRIVATE_HEADERS} INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_ID}>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_ID}>
)

install (
    FILES ${${PROJECT_CMAKE_NAMESPACE}_PUBLIC_HEADER_FILES}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_ID}
)

install (
    FILES ${${PROJECT_CMAKE_NAMESPACE}_PRIVATE_HEADER_FILES}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_ID}/private
)

unset (${PROJECT_CMAKE_NAMESPACE}_PRIVATE_HEADER_FILES)
unset (${PROJECT_CMAKE_NAMESPACE}_PUBLIC_HEADER_FILES)

unset (${PROJECT_CMAKE_NAMESPACE}_PRIVATE_HEADERS)
unset (${PROJECT_CMAKE_NAMESPACE}_PUBLIC_HEADERS)

