include (GNUInstallDirs)

set (${PROJECT_ID}_EXECUTABLE_NAME ${PROJECT_ID})

add_executable (${${PROJECT_ID}_EXECUTABLE_NAME})

set_property (TARGET ${${PROJECT_ID}_EXECUTABLE_NAME} PROPERTY CXX_STANDARD ${${PROJECT_CMAKE_NAMESPACE}_CXX_STANDARD})
set_property (TARGET ${${PROJECT_ID}_EXECUTABLE_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)

target_sources(
    ${${PROJECT_ID}_EXECUTABLE_NAME} PRIVATE
    main.cpp
)

target_compile_definitions (
    ${${PROJECT_ID}_EXECUTABLE_NAME} PRIVATE
    -D$<UPPER_CASE:${${PROJECT_ID}_EXECUTABLE_NAME}>_LIB
    -DSOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}"
    -DBINARY_DIR="${CMAKE_CURRENT_BINARY_DIR}"
)

target_link_libraries (
    ${${PROJECT_ID}_EXECUTABLE_NAME}
    PUBLIC
    PRIVATE
        ${PROJECT_ID}::PrivateHeaders
    PRIVATE
        ${PROJECT_ID}::Library
    PRIVATE
        $<BUILD_INTERFACE:${PROJECT_ID}::Options>
        $<BUILD_INTERFACE:${PROJECT_ID}::Warnings>
)

install (
    TARGETS ${${PROJECT_ID}_EXECUTABLE_NAME}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

unset (${PROJECT_ID}_EXECUTABLE_NAME)
